# gitsheets

./: .eslintrc.js  .gitignore  .markdownlint-cli2.jsonc  .studiorc  .tool-versions  404.html  CLAUDE.md  CNAME  README.md  cypress.json  index.html  mkdocs.yml  package-lock.json  package.json  postcss.config.js  sitemap.xml  skills-lock.json  tsconfig.build.json  tsconfig.json  vitest.config.ts  vue.config.js
.claude/: settings.json
.claude/agents/: spec-drift-auditor.md
.claude/commands/: audit-spec-drift.md
.claude/skills/: specops
.github/workflows/: ci.yml  core-napi.yml  docs-site.yml  publish-npm.yml  publish-website.yml  python-publish.yml  release-deploy.yml  release-prepare.yml  rust-core.yml
.holo/: config.toml
advanced-layouts/: index.html
api/: index.html
axi/: index.html
backend/: .gitignore  package-lock.json  package.json  server.js
backend/commands/: edit.js  explode.js  normalize.js  query.js  read.js  singer-target.js  upsert.js
backend/lib/: GitSheets.js  Repository.js  Sheet.js  errors.js  hologit.js  index.js  index2.js
backend/test/: GitSheets.spec.js  explode.spec.js  lib.spec.js  server.spec.js
canonical-sorting/: index.html
cli/: index.html
cli/examples/: index.html
concepts/: index.html
contracts/: index.html
docs/: .pages  CNAME  README.md  advanced-layouts.md  api.md  axi.md  canonical-sorting.md  cli.md  concepts.md  contracts.md  migration-guide.md  path-templates.md  quick-demo.md  quick-start.md  validation.md
docs/cli/: .pages  README.md  examples.md
docs/nodejs/: .pages  README.md
docs/recipes/: markdown-cms.md  migrating-config.md  production-push-daemon.md  request-bound-transactions.md  secondary-indices.md  typed-sheet-with-zod.md
migration-guide/: index.html
nodejs/: index.html
notes/: holo-tree-findings.md
path-templates/: index.html
plans/: README.md  addon-prebuild-publish.md  attachment-staging-core.md  canonical-rebaseline.md  consumer-api-ergonomics.md  contracts-cli.md  contracts-consumer-verify.md  contracts-core.md  core-napi-0.2.0-release.md  date-bucket-path-keys.md  definition-logic-core.md  gitsheets-core-foundation.md  holo-tree-migration.md  holo-tree-napi-spike.md  locale-collation-core.md  markdown-codec-core.md  markdown-normalize-core.md  marshal-drop-nullish.md  node-binding-thin.md  pypi-publication.md  python-binding.md  readme-getting-started.md  record-engine-core.md  record-query-index.md  sheet-freshness-streaming.md  sheet-store-core.md  spec-attachment-handle-drift.md  toml-canonical-core.md
public/: index.html
quick-demo/: index.html
quick-start/: index.html
recipes/markdown-cms/: index.html
recipes/migrating-config/: index.html
recipes/production-push-daemon/: index.html
recipes/request-bound-transactions/: index.html
recipes/secondary-indices/: index.html
recipes/typed-sheet-with-zod/: index.html
rust/: .gitignore  Cargo.toml
rust/gitsheets-core/: Cargo.toml
rust/gitsheets-core/examples/: normalize_tree.rs  parity_report.rs  serialize_file.rs
rust/gitsheets-core/src/: canonical.rs  codec.rs  collator.rs  config.rs  contract.rs  diff.rs  engine.rs  error.rs  index.rs  lib.rs  path_template.rs  query.rs  record.rs  sheet.rs  store.rs  transaction.rs  validation.rs  value.rs
rust/gitsheets-core/tests/: corpus_parity.rs
rust/gitsheets-core/tests/fixtures/: datetimes_and_numbers.expected.toml  identical_multiline_body.input.toml  integer_underscore.expected.toml  integer_underscore.input.toml  multiline_trailing_quote.expected.toml  multiline_trailing_quote.input.toml  string_requote.expected.toml  string_requote.input.toml
rust/gitsheets-napi/: Cargo.toml  README.md  binding.cjs  index.d.ts  index.js  package-lock.json  package.json
rust/gitsheets-napi/bench/: query-bench.mjs
rust/gitsheets-napi/bench/fixture/people/: a-eye-ceo-closedloop-ai.toml  a-gemm.toml  a-i.toml  a-priori-rainbows.toml  a-ward.toml  a1environmentalca.toml  a1servicegroup.toml  a1t92t.toml  a2jhacker.toml  a2peterson.toml  a2zgiga.toml  a2zhomeo.toml  aaafurniture.toml  aadamson26.toml  aadhayarathi.toml  aadhyasharma007.toml  aadyanur.toml  aaesuzuki.toml  aafwkoz.toml  aahtrading7865.toml  aakansha321.toml  aakashpatel6600.toml  aakrutisingh21.toml  aaliyan.toml  aamer123.toml  aamliya.toml  aamlye.toml  aanari.toml  aanya0.toml  aaradhya.toml  aarodrago.toml  aarogyapathcare.toml  aarohiyadav320.toml  aaron-peazzoni.toml  aaron.toml  aaron0browne.toml  aaron95.toml  aaronaaron.toml  aaronbauman.toml  aaronc.toml  (+19 more)
rust/gitsheets-napi/npm/darwin-arm64/: README.md  package.json
rust/gitsheets-napi/npm/darwin-x64/: README.md  package.json
rust/gitsheets-napi/npm/linux-arm64-gnu/: README.md  package.json
rust/gitsheets-napi/npm/linux-x64-gnu/: README.md  package.json
rust/gitsheets-napi/npm/linux-x64-musl/: README.md  package.json
rust/gitsheets-napi/npm/win32-x64-msvc/: README.md  package.json
rust/gitsheets-napi/src/: lib.rs
rust/gitsheets-napi/test/: _ref-path-template.mjs  _ref-query.mjs  canonical.mjs  collator-parity.mjs  contracts.mjs  engine-parity.mjs  errors.mjs  path-template.mjs  record-crud.mjs  record-index.mjs  record-query.mjs  roundtrip.mjs  sheet-attachments.mjs  sheet-markdown.mjs  sheet-store.mjs  validation-parity.mjs
rust/gitsheets-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
rust/gitsheets-py/python/gitsheets/: __init__.py
rust/gitsheets-py/src/: lib.rs
rust/gitsheets-py/tests/: _node_writer.mjs  test_contracts.py  test_cross_binding.py  test_smoke.py
script/: studio
search/: search_index.json
skills/gitsheets/: SKILL.md
specs/: README.md  architecture.md  concepts.md  deferred.md  rust-core.md
specs/api/: cli.md  conventions.md  (+6 more)
src/: App.vue  errors.test.ts  errors.ts  index.ts  main.js  patch.test.ts  patch.ts  push-daemon.test.ts  push-daemon.ts  repository.test.ts  repository.ts  router.js  sheet-indexing.test.ts  sheet-patch.test.ts  sheet-query-signal.test.ts  sheet.ts  store.js  store.test.ts  store.ts  transaction.ts  validation.test.ts
validation/: index.html
welcome/: index.html
(+82 files in other folders)
