[package]
name = "gitsheets-napi"
description = "Node.js native binding for gitsheets-core: marshals records between JS and the Rust core with full TOML type fidelity."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Node-API floor of 6 covers Node.js >= 20 comfortably.
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
gitsheets-core = { path = "../gitsheets-core" }
# Same version the core uses, to build table values key-by-key in marshalling.
indexmap = "2"
# The value type's datetimes are backed by `toml::value::Datetime`; the binding
# needs the type to bridge it to/from a JS `Date`.
toml = "0.8"
# Calendar math for the `Date` <-> TOML-datetime bridge (epoch-millis <-> civil
# date components). The JS `Date` surface is a host concern, so this lives in
# the binding, not the core.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[build-dependencies]
napi-build = "2"
