[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "gitsheets"
description = "Python binding for gitsheets-core — a git-backed document store, over the shared Rust engine."
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Jarvus Innovations" }]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/JarvusInnovations/gitsheets"

[project.optional-dependencies]
# The consumer-validator hook is validator-agnostic (any callable / Pydantic
# model). Pydantic is pulled in only for the dev/test parity suite.
test = ["pytest>=8", "pydantic>=2"]

[tool.maturin]
# Mixed Rust/Python layout: the compiled extension is `gitsheets._gitsheets`,
# wrapped by the pure-Python idiomatic surface under `python/gitsheets/`.
module-name = "gitsheets._gitsheets"
python-source = "python"
manifest-path = "Cargo.toml"
# abi3 wheels: one wheel per platform works on CPython >= 3.9.
features = ["pyo3/abi3-py39"]
